[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/WarningSign/exclamation-mark.png" type="Texture" id=1]
[ext_resource path="res://Entities/WarningSign/box-top.png" type="Texture" id=2]
[ext_resource path="res://Entities/WarningSign/box-right.png" type="Texture" id=3]
[ext_resource path="res://Entities/WarningSign/box-down.png" type="Texture" id=4]
[ext_resource path="res://Entities/WarningSign/box-left.png" type="Texture" id=5]
[ext_resource path="res://Entities/WarningSign/WarningSign.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.297302, 0.297302 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}

[node name="WarningSign" type="Position2D"]
light_mask = 2
script = ExtResource( 6 )

[node name="BoxBot" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="BoxLeft" type="Sprite" parent="."]
visible = false
light_mask = 2
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="BoxTop" type="Sprite" parent="."]
visible = false
light_mask = 2
position = Vector2( -0.5, -0.5 )
texture = ExtResource( 2 )
offset = Vector2( 0.5, 0.5 )

[node name="BoxRight" type="Sprite" parent="."]
visible = false
light_mask = 2
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Mark" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/disappear = SubResource( 1 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
